labels adjusted, splash screen OK
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11031 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE German Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 info.language = Deutsch
@@ -216,7 +217,7 @@ menu.content = Inhalt
 menu.pathways.editslide = Folie bearbeiten
 menu.pathways.editmasterslide = Masterfolie bearbeiten
 menu.pathways.handoutsandnotes = Handzettel und Notizen
-menu.help.vuelog = VUE-Log
+menu.help.vuelog = designVUE-Log
 menu.windiws.openrecent = Zuletzt genutzt
 menu.windows.save = Speichern
 menu.windows.saveas = Speichern als ...
@@ -435,8 +436,8 @@ action.makenaturalsize = Originalgr\u00F6\u00DFe
 action.editslide = Folie bearbieten
 action.undo = R\u00FCckg\u00E4ngig
 action.redo = Wiederholen
-dialog.preference.message = Die \u00C4nderung wird bei einem Neustart von VUE wirksam
-dialog.preference.title = VUE neu starten
+dialog.preference.message = Die \u00C4nderung wird bei einem Neustart von designVUE wirksam
+dialog.preference.title = designVUE neu starten
 dialog.addurlaction.message = URL pr\u00FCfen. Ressource konnte nicht hinzugef\u00FCgt werden.
 dialog.addurlaction.title = URL pr\u00FCfen
 dialog.revert.message = Es gibt keine vorherige Version der Map.
@@ -479,7 +480,7 @@ optiondialog.savechages.message = Wollen Sie die duchgef\u00FChrten \u00C4nderun
 optiondialog.savechages.title = \u00C4nderungen speichern?
 optiondialog.savechages.dontsave = Nicht speichern
 optiondialog.savechages.save = Speichern
-dialog.initfailed.message = VUE initialisieren gescheitert
+dialog.initfailed.message = designVUE initialisieren gescheitert
 dialog.activemap.message = Hier ist keine aktive Map. Bitte \u00F6ffnen Sie eine g\u00FCltige Map.
 dialog.activemap.title = Ung\u00FCltige map
 dialog.analyzeerror.message = Dieser Knoten enth\u00E4lt keine relevanten Infomationen zur Analyse 
@@ -532,7 +533,7 @@ jbutton.relational.label = Relational
 jbutton.folder.label = Ordner
 jbutton.load.label = Laden
 pane.dataset.message = Bitte den Datensatztyp ausw\u00E4hlen
-preferencedailog.vuepreference = VUE Einstellungen
+preferencedailog.vuepreference = designVUE Einstellungen
 preferencedailog.mapdisplay = Mapanzeige
 preferencedailog.images = Bilder
 addcustomcategory.label = Eigene Kategorien hinzuf\u00FCgen
@@ -671,12 +672,12 @@ actionutil.filecorrupted.error = Speicherfehler\: Die Map kann besch\u00E4digt w
 actionutil.filecorrupted.description = Problembeschreibung
 actionutil.internalsave.title = Interner Speicherfehler
 actionutil.notifyversion.message = Die Datei %s wurde in einer neueren Version von VUE gespeichert als Sie gerade nutzen.
-actionutil.notifyversion.datamodel = Das Datenmodell der Map ist \#%d. Die derzeit genutzte Version von VUE kann bis zum Modell \#%d nutzen.
+actionutil.notifyversion.datamodel = Das Datenmodell der Map ist \#%d. Die derzeit genutzte Version von designVUE kann bis zum Modell \#%d nutzen.
 actionutil.notifyversion.savedversion = VUE-Version mit der die Map gespeichert wurde 
-actionutil.notifyversion.currentversion = Aktuell laufende Version von VUE
-actionutil.notifyversion.vuebuilt = VUE-Built
-actionutil.notifyversion.displaymap = Diese Version von VUE kann die Map nicht korrekt anzeigen. Speicher
-actionutil.notifyversion.corruptmap = der Map in dieser Version von VUE kann zu einer Besch\u00E4digug der Map f\u00FChren.
+actionutil.notifyversion.currentversion = Aktuell laufende Version von designVUE
+actionutil.notifyversion.vuebuilt = designVUE-Built
+actionutil.notifyversion.displaymap = Diese Version von designVUE kann die Map nicht korrekt anzeigen. Speicher
+actionutil.notifyversion.corruptmap = der Map in dieser Version von designVUE kann zu einer Besch\u00E4digug der Map f\u00FChren.
 actionutil.notifyversion.versionwarning = Versionswarnung %s
 actionutil.filenotfound.error = Nicht gefunden
 actionutil.filenotfound.title = Datei nicht gefunden
@@ -684,20 +685,20 @@ imagemap.mapnotsaved.error = Bildmap nicht gespeichert
 imagemap.mapnotsaved.title = Bildmap
 imagemap.fileexists.warning = png-Bild existiert bereits. \u00DCberschreiben?
 imagemap.fileexists.title = Datei existiert bereits
-openaction.mapopen.error = Die folgende Map kann mit dieser Version von VUE nicht ge\u00F6ffnet werden.
+openaction.mapopen.error = Die folgende Map kann mit dieser Version von designVUE nicht ge\u00F6ffnet werden.
 openaction.mapopen.title = Fehler beim \u00D6ffnen der Map
 openaction.mapnotfound.error = Datei nicht gefunden.
 openaction.mapnotfound.title = Map nicht gefunden
 openaction.openmapproblem.title = Problem beim \u00D6ffnen der Map
 publishdatasourceaction.title = Fehler beim Ver\u00F6ffentlichen
-rfdopenaction.openfile.error = kann in dieser VUE Version nicht ge\u00F6ffnet werden
+rfdopenaction.openfile.error = kann in dieser designVUE Version nicht ge\u00F6ffnet werden
 rfdopenaction.openfile.title = Fehler beim \u00D6ffnen der Map
 saveaction.problem = Problem %s
 saveaction.targetfiel = Zieldatei war '%s'
 saveaction.savemap.error = Fehler beim Speichern der Map
 saveaction.saveacopy = Kopie speichern
 saveaction.save = Speichern
-dialog.saveaction.message = Speichern (0) in dieser VUE-Version verhindert das richtige \u00D6ffnen in \u00E4lteren VUE Programmversionen. Vielleicht wollen Sie die Datei unter einem anderen Namen abspeichern.
+dialog.saveaction.message = Speichern (0) in dieser designVUE-Version verhindert das richtige \u00D6ffnen in \u00E4lteren VUE Programmversionen. Vielleicht wollen Sie die Datei unter einem anderen Namen abspeichern.
 dialog.saveaction.title = Versionshinweis (0)
 menu.addstylesheet = Vorlage hinzuf\u00FCgen
 menu.deleteontology = Ontologie l\u00F6schen
@@ -806,7 +807,7 @@ jlabel.more = <<mehr
 jlabel.less = weniger>>
 jlabel.resourcemetadata = Ressourcen-Metadaten
 jlabel.all = Alle
-jlabel.newversion = Eine neuere Version von VUE ist verf\u00FCgbar
+jlabel.newversion = Eine neuere Version von designVUE ist verf\u00FCgbar
 jlabel.assetdisplayoffline = Assetanzeige offlne
 showagaindialog.donotshow.tooltip = nicht mehr anzeigen
 vuemenubar.printvisible.tooltip = Druckfunkton anzeigen
@@ -972,7 +973,7 @@ action.image.show=Show Image
 
 #Preferences window
 preferences.language.title=Language
-preferences.language.description=Language to use: this will over-ride (for VUE only) the language chosen as the system preference.  You must restart VUE for any change to take effect.
+preferences.language.description=Language to use: this will over-ride (for designVUE only) the language chosen as the system preference.  You must restart designVUE for any change to take effect.
 preferences.language.loading=Loading...
 
 pathwaytable.menu.pathway=Pathway Menu
@@ -1151,7 +1152,7 @@ interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1242,7 +1243,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
