--- a/VUE2/src/tufts/vue/VueResources_es_ES.properties
+++ b/VUE2/src/tufts/vue/VueResources_es_ES.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Spanish Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -249,7 +250,7 @@ menu.content=Contenido
 menu.pathways.editslide=Editar Diapositiva
 menu.pathways.editmasterslide=Editar Diapositiva Maestra
 menu.pathways.handoutsandnotes=Hojas y notas
-menu.help.vuelog=Log VUE
+menu.help.vuelog=Log designVUE
 menu.windiws.openrecent=Abrir reciente
 menu.windows.save=Guardar
 menu.windows.saveas=Guardar como...
@@ -518,12 +519,12 @@ action.undo=Deshacer
 action.redo=Rehacer
 
 #Preference Dialog 
-dialog.preference.message=Debe reiniciar VUE para que los cambios tengan efecto.
-dialog.preference.title=Reiniciar VUE
+dialog.preference.message=Debe reiniciar designVUE para que los cambios tengan efecto.
+dialog.preference.title=Reiniciar designVUE
 
 #Preferences window
 preferences.language.title=Idioma
-preferences.language.description=Idioma a usar: esto por encima de (por s\u00f3lo VUE) el idioma elegido como el sistema de preferencia. Debe reiniciar VUE para cualquier cambio surta efecto.
+preferences.language.description=Idioma a usar: esto por encima de (por s\u00f3lo designVUE) el idioma elegido como el sistema de preferencia. Debe reiniciar designVUE para cualquier cambio surta efecto.
 preferences.language.loading=Cargando...
 
 # Application Frame Dialog
@@ -577,7 +578,7 @@ optiondialog.savechages.message=Desea guardad los cambios realizados a \n
 optiondialog.savechages.title=Guardar cambios?
 optiondialog.savechages.dontsave=No Guardar
 optiondialog.savechages.save=Guardar
-dialog.initfailed.message=Error al iniciar VUE
+dialog.initfailed.message=Error al iniciar designVUE
 
 #Action
 dialog.activemap.message=No hay un mapa activo, por favor abra un mapa v\u00e1lido.
@@ -660,7 +661,7 @@ jbutton.load.label=Cargar
 pane.dataset.message=Por favor seleccione un tipo de dato
 
 #PreferenceDailog
-preferencedailog.vuepreference=Preferencias de VUE
+preferencedailog.vuepreference=Preferencias de designVUE
 preferencedailog.mapdisplay=Despliegue de Mapas
 preferencedailog.images=Im\u00e1genes
 
@@ -835,12 +836,12 @@ actionutil.filecorrupted.error="Error al guardar; Archivo de mapas est\u00e1 cor
 actionutil.filecorrupted.description=Descripci\u00f3n del Problema
 actionutil.internalsave.title=Error interno al guardar
 actionutil.notifyversion.message=el archivo %s ha sido guardado con una versi\u00f3n posterior de VUE a la que se est\u00e1 utilizando.
-actionutil.notifyversion.datamodel=El modelo de datos de este mapa es #%d, y esta versi\u00f3n de VUE s\u00f3lo entiende hasta el modelo #%d.
+actionutil.notifyversion.datamodel=El modelo de datos de este mapa es #%d, y esta versi\u00f3n de designVUE s\u00f3lo entiende hasta el modelo #%d.
 actionutil.notifyversion.savedversion=Versi\u00f3n de VUE que ha guardado este archivo
-actionutil.notifyversion.currentversion=Versi\u00f3n actual de VUE ejecut\u00e1ndose
-actionutil.notifyversion.vuebuilt=construcci\u00f3n de VUE
-actionutil.notifyversion.displaymap=Esta versi\u00f3n de VUE puede no mostrar el mapa correctamente. Guardando
-actionutil.notifyversion.corruptmap=Este mapa en esta versi\u00f3n de VUE puede resultar en un mapa corrupto.
+actionutil.notifyversion.currentversion=Versi\u00f3n actual de designVUE ejecut\u00e1ndose
+actionutil.notifyversion.vuebuilt=construcci\u00f3n de designVUE
+actionutil.notifyversion.displaymap=Esta versi\u00f3n de designVUE puede no mostrar el mapa correctamente. Guardando
+actionutil.notifyversion.corruptmap=Este mapa en esta versi\u00f3n de designVUE puede resultar en un mapa corrupto.
 actionutil.notifyversion.versionwarning=Advertencia de Versi\u00f3n %s
 actionutil.filenotfound.error=No se pudo encontrar
 actionutil.filenotfound.title=Archivo no encontrado
@@ -852,7 +853,7 @@ imagemap.fileexists.warning=imagen png ya existe, reemplazar?
 imagemap.fileexists.title=Archivo ya existe
 
 #OpenAction
-openaction.mapopen.error=El siguiente mapa no puede ser abierto en la versi\u00f3n actual de VUE.
+openaction.mapopen.error=El siguiente mapa no puede ser abierto en la versi\u00f3n actual de designVUE.
 openaction.mapopen.title=Error al abrir Mapa
 openaction.mapnotfound.error=archivo no encontrado.
 openaction.mapnotfound.title=Mapa No Encontrado
@@ -862,7 +863,7 @@ openaction.openmapproblem.title=Problema al Abrir Mapa
 publishdatasourceaction.title=Error de Publicaci\u00f3n
 
 #RFDOpenAction
-rfdopenaction.openfile.error=no puede ser abierto con esta versi\u00f3n de VUE.
+rfdopenaction.openfile.error=no puede ser abierto con esta versi\u00f3n de designVUE.
 rfdopenaction.openfile.title=Error al abrir Mapa
 
 #SaveAction
@@ -871,7 +872,7 @@ saveaction.targetfiel=Archivo de destino es '%s'
 saveaction.savemap.error=Ha ocurrido un error al guardar el mapa
 saveaction.saveacopy=Guardar una copia
 saveaction.save=Guardar
-dialog.saveaction.message=Guardar {0} en esta versi\u00f3n de VUE puede impedir que versiones anteriores de VUE \n lo abran correctamente. Tal ves prefiera guardar este mapa con un nuevo nombre.
+dialog.saveaction.message=Guardar {0} en esta versi\u00f3n de designVUE puede impedir que versiones anteriores de VUE \n lo abran correctamente. Tal ves prefiera guardar este mapa con un nuevo nombre.
 dialog.saveaction.title=Aviso de Versi\u00f3n {0}
 
 #OntologyList
@@ -997,7 +998,7 @@ jlabel.more=<< m\u00e1s
 jlabel.less=menos >>
 jlabel.resourcemetadata=Datos de Recursos
 jlabel.all=Todo
-jlabel.newversion=Una nueva versi\u00f3n de VUE est\u00e1 disponible
+jlabel.newversion=Una nueva versi\u00f3n de designVUE est\u00e1 disponible
 jlabel.assetdisplayoffline=Despliegue de Activos fuera de l\u00ednea
 showagaindialog.donotshow.tooltip=no mostrar nuevamente
 vuemenubar.printvisible.tooltip=Imprimir Vista
@@ -1351,7 +1352,7 @@ interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1442,7 +1443,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
