--- a/VUE2/src/tufts/vue/VueResources_fr_FR.properties
+++ b/VUE2/src/tufts/vue/VueResources_fr_FR.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE French Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions(Cette section contient les m\u00e9tadonn\u00e9es pour identifier la langue
@@ -247,7 +248,7 @@ menu.content=Contenu
 menu.pathways.editslide=Editer Diapo
 menu.pathways.editmasterslide=Editer Diapo Maitre
 menu.pathways.handoutsandnotes=Documentation et Notes
-menu.help.vuelog=VUE Journal
+menu.help.vuelog=designVUE Journal
 menu.windiws.openrecent=Fichiers R\u00e9cents 
 menu.windows.save=Enregistrer
 menu.windows.saveas=Enregistrer sous...
@@ -517,7 +518,7 @@ action.redo=R\u00e9tablir
 
 #Preference Dialog 
 dialog.preference.message=Vous devez red\u00e9marrer Vue pour que la modification soit effective.
-dialog.preference.title=Red\u00e9marrer VUE
+dialog.preference.title=Red\u00e9marrer designVUE
 
 # Application Frame Dialog
 dialog.addurlaction.message=URL Mal form\u00e9, la ressource ne peut pas \u00eatre ajout\u00e9e.
@@ -570,7 +571,7 @@ optiondialog.savechages.message=Voulez-vous sauvegarder les modifications r\u00e
 optiondialog.savechages.title=Sauvegarder les modifications ?
 optiondialog.savechages.dontsave=Ne pas Sauvegarder
 optiondialog.savechages.save=Sauvegarder
-dialog.initfailed.message=Echec initialisation VUE
+dialog.initfailed.message=Echec initialisation designVUE
 
 #Action
 dialog.activemap.message=Aucune carte active. Ouvrir une carte valide S.V.P.
@@ -653,7 +654,7 @@ jbutton.load.label=Charger
 pane.dataset.message=S\u00e9lectionner un Type de Donn\u00e9es S.V.P.
 
 #PreferenceDailog
-preferencedailog.vuepreference=VUE Pr\u00e9f\u00e9rences
+preferencedailog.vuepreference=designVUE Pr\u00e9f\u00e9rences
 preferencedailog.mapdisplay=Afficher Carte
 preferencedailog.images=Images
 
@@ -828,12 +829,12 @@ actionutil.filecorrupted.error=Erreur Enregistrement; Un fichier carte ne peut p
 actionutil.filecorrupted.description=Probl\u00e8me description fichier corrompu
 actionutil.internalsave.title=Erreur interne \u00e0 l'enregistrement
 actionutil.notifyversion.message=Le fichier %s est enregistr\u00e9 dans une nouvelle version de VUE qui s'execute.
-actionutil.notifyversion.datamodel=Le mod\u00e8le de donn\u00e9es dans cette carte est #%d, et cette version de of VUE ne fonctionne qu'avec le mod\u00e8le #%d.
+actionutil.notifyversion.datamodel=Le mod\u00e8le de donn\u00e9es dans cette carte est #%d, et cette version de designVUE ne fonctionne qu'avec le mod\u00e8le #%d.
 actionutil.notifyversion.savedversion=Version de VUE qui enregistre ce fichier
-actionutil.notifyversion.currentversion=Version courante de VUE
-actionutil.notifyversion.vuebuilt=construction de VUE
-actionutil.notifyversion.displaymap=Cette version de VUE ne peut pas afficher cette carte correctement. Sauvegardez...
-actionutil.notifyversion.corruptmap=Cette carte dans cette version de VUE produira une carte corrompue.
+actionutil.notifyversion.currentversion=Version courante de designVUE
+actionutil.notifyversion.vuebuilt=construction de designVUE
+actionutil.notifyversion.displaymap=Cette version de designVUE ne peut pas afficher cette carte correctement. Sauvegardez...
+actionutil.notifyversion.corruptmap=Cette carte dans cette version de designVUE produira une carte corrompue.
 actionutil.notifyversion.versionwarning=Version Attention %s
 actionutil.filenotfound.error=Introuvable
 actionutil.filenotfound.title=Fichier inexistant
@@ -845,7 +846,7 @@ imagemap.fileexists.warning= image .png existe d\u00e9j\u00e0  , Voulez-vous le 
 imagemap.fileexists.title=Fichier d\u00e9j\u00e0 existant
 
 #OpenAction
-openaction.mapopen.error=La carte ne peut pas \u00eatre ouverte avec cette version de VUE.
+openaction.mapopen.error=La carte ne peut pas \u00eatre ouverte avec cette version de designVUE.
 openaction.mapopen.title=Erreur ouverture Fichier Carte
 openaction.mapnotfound.error=fichier inexistant.
 openaction.mapnotfound.title=Carte inexistante
@@ -855,7 +856,7 @@ openaction.openmapproblem.title=Probl\u00e8me d'ouverture de Fichier carte
 publishdatasourceaction.title= Erreur \u00e0 la publication
 
 #RFDOpenAction
-rfdopenaction.openfile.error=ne peut pas s'ouvrir dans cette version de VUE.
+rfdopenaction.openfile.error=ne peut pas s'ouvrir dans cette version de designVUE.
 rfdopenaction.openfile.title=Erreur \u00e0 l'ouverture du Fichier Carte
 
 #SaveAction
@@ -864,7 +865,7 @@ saveaction.targetfiel=Fichier cible '%s'
 saveaction.savemap.error=Il y a eu une erreur \u00e0 l'enregistrement de la carte
 saveaction.saveacopy=Enregistrer une copie
 saveaction.save=Enregistrer
-dialog.saveaction.message=Enregistrer {0} avec cette version de VUE emp\u00e8chera \u00e0 d'anciennes versions de VUE de s'afficher correctement.  Il est souhaitable d\u00a0'enregistrer cette carte avec un nouveau nom.
+dialog.saveaction.message=Enregistrer {0} avec cette version de designVUE emp\u00e8chera \u00e0 d'anciennes versions de VUE de s'afficher correctement.  Il est souhaitable d\u00a0'enregistrer cette carte avec un nouveau nom.
 dialog.saveaction.title=Version Notice {0}
 
 #OntologyList
@@ -990,7 +991,7 @@ jlabel.more=<< Plus
 jlabel.less=Moins >>
 jlabel.resourcemetadata=Ressource M\u00e9tadonn\u00e9es
 jlabel.all=Tous
-jlabel.newversion=Une nouvelle version de VUE est disponible
+jlabel.newversion=Une nouvelle version de designVUE est disponible
 jlabel.assetdisplayoffline=Afficher Asset  Offline
 showagaindialog.donotshow.tooltip=Ne pas montrer \u00e0 nouveau 
 vuemenubar.printvisible.tooltip=Afficher le Visible
@@ -1171,7 +1172,7 @@ action.image.show=Montrer l'Image
 
 #Preferences window
 preferences.language.title=Langage
-preferences.language.description=Langage \u00e0 utiliser: cela remplacera (pour VUE uniquement) la langue choisie en pr\u00e9f\u00e9rence syst\u00e8me.  Vous devez red\u00e9marer VUE pourque la modification soit effective.
+preferences.language.description=Langage \u00e0 utiliser: cela remplacera (pour designVUE uniquement) la langue choisie en pr\u00e9f\u00e9rence syst\u00e8me.  Vous devez red\u00e9marer designVUE pourque la modification soit effective.
 preferences.language.loading=Chargement...
 
 pathwaytable.menu.pathway= Menu Chemin d'acc\u00e8s
@@ -1441,7 +1442,7 @@ quickImport.selectfile=Adresse:
 quickImport.browse=Naviguer
 quickImport.cancel=Abandon
 quickImport.add=Ajouter
-quickImport.help=<html>Ajouter le contenu \u00e0 une nouvelle carte VUE. Les fichiers CSV, XML, RSS, RDF, OWL  <br>et dossiers (images or fichiers) sont accept\u00e9s.Les fichiers  CSV, XML, et RSS f <br>seront ajout\u00e9s \u00e0 la fen\u00eatre R\u00e9pertoire fichiers.</html>
+quickImport.help=<html>Ajouter le contenu \u00e0 une nouvelle carte designVUE. Les fichiers CSV, XML, RSS, RDF, OWL  <br>et dossiers (images or fichiers) sont accept\u00e9s.Les fichiers  CSV, XML, et RSS f <br>seront ajout\u00e9s \u00e0 la fen\u00eatre R\u00e9pertoire fichiers.</html>
 
 menu.format.arrange.sendtoback.tooltip=Verifier que cet objet n'en cache pas un autre
 menu.format.arrange.bringtofront.tooltip=Monter l'objet vers le haut, totalement visible
