--- a/VUE2/src/tufts/vue/VueResources_hu_HU.properties
+++ b/VUE2/src/tufts/vue/VueResources_hu_HU.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Hungarian Language File
 # June 10, 2010
+#HO 28/10/2011 - VUE labels changed to designVUE for designVUE edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -248,7 +249,10 @@ menu.content=\u00d6sszetev\u0151k
 menu.pathways.editslide=Di\u00e1k szerkeszt\u00e9se
 menu.pathways.editmasterslide=Mester dia szerkeszt\u00e9se
 menu.pathways.handoutsandnotes=K\u00e9ziratok \u00e9s jegyzetek
-menu.help.vuelog=VUE Log
+#HO 28/10/2011 BEGIN **********
+#menu.help.vuelog=VUE Log
+menu.help.vuelog=designVUE Log
+#HO 28/10/2011 END **********
 menu.windiws.openrecent=El\u0151zm\u00e9ny megnyit\u00e1sa
 menu.windows.save=Ment\u00e9s
 menu.windows.saveas=Ment\u00e9s m\u00e1sk\u00e9nt...
@@ -517,8 +521,13 @@ action.undo=Vissza
 action.redo=M\u00e9gis
 
 #Preference Dialog 
-dialog.preference.message=\u00dajra kell ind\u00edtani a VUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
-dialog.preference.title=VUE \u00fajraind\u00edt\u00e1sa
+#HO 28/10/2011 BEGIN *************
+#dialog.preference.message=\u00dajra kell ind\u00edtani a VUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
+dialog.preference.message=\u00dajra kell ind\u00edtani a designVUE-t, hogy ez a be\u00e1ll\u00edt\u00e1s \u00e9rv\u00e9nybe l\u00e9phesen.
+#dialog.preference.title=VUE \u00fajraind\u00edt\u00e1sa
+dialog.preference.title=designVUE \u00fajraind\u00edt\u00e1sa
+#HO 28/10/2011 END *************
+
 
 #Preferences window
 preferences.language.title=Nyelv
@@ -870,7 +879,7 @@ saveaction.targetfiel=C\u00e9l f\u00e1jl '%s' volt
 saveaction.savemap.error=Hiba t\u00f6rt\u00e9nt a t\u00e9rk\u00e9p ment\u00e9s\u00e9n\u00e9l
 saveaction.saveacopy=M\u00e1solat ment\u00e9se
 saveaction.save=Ment\u00e9s
-dialog.saveaction.message={0} ment\u00e9se a VUE jelenlegi verzi\u00f3j\u00e1ban megakad\u00e1lyozza, hogy egy kor\u00e1bbi verzi\u00f3 \n helyesen jelen\u00edtse meg. Tal\u00e1n ink\u00e1bb mentse m\u00e1s n\u00e9ven ezt a t\u00e9rk\u00e9pet.
+dialog.saveaction.message={0} ment\u00e9se a designVUE jelenlegi verzi\u00f3j\u00e1ban megakad\u00e1lyozza, hogy egy kor\u00e1bbi verzi\u00f3 \n helyesen jelen\u00edtse meg. Tal\u00e1n ink\u00e1bb mentse m\u00e1s n\u00e9ven ezt a t\u00e9rk\u00e9pet.
 dialog.saveaction.title=Verzi\u00f3 megjegyz\u00e9s {0}
 
 #OntologyList
@@ -1441,7 +1450,7 @@ quickImport.selectfile=Hely:
 quickImport.browse=Tall\u00f3z\u00e1s
 quickImport.cancel=M\u00e9gsem
 quickImport.add=Hozz\u00e1ad
-quickImport.help=<html>Tartalom hozz\u00e1ad\u00e1sa egy \u00faj VUE t\u00e9rk\u00e9phez. CSV, XML, RSS, RDF, OWL f\u00e1jlokat <br>\u00e9s mapp\u00e1kat (k\u00e9peket vagy f\u00e1jlokat) is t\u00e1mogtja.  A hozz\u00e1adott CSV, XML, \u00e9s RSS f\u00e1jlokat <br> megtal\u00e1lja az \u00d6sszetev\u0151k ablak Adathalmazok f\u00fcl\u00f6n</html>
+quickImport.help=<html>Tartalom hozz\u00e1ad\u00e1sa egy \u00faj designVUE t\u00e9rk\u00e9phez. CSV, XML, RSS, RDF, OWL f\u00e1jlokat <br>\u00e9s mapp\u00e1kat (k\u00e9peket vagy f\u00e1jlokat) is t\u00e1mogtja.  A hozz\u00e1adott CSV, XML, \u00e9s RSS f\u00e1jlokat <br> megtal\u00e1lja az \u00d6sszetev\u0151k ablak Adathalmazok f\u00fcl\u00f6n</html>
 
 menu.format.arrange.sendtoback.tooltip=Gy\u0151z\u0151dj\u00f6n meg r\u00f3la, hogy ez az elem ne takarja a t\u00f6bbi elemet.
 menu.format.arrange.bringtofront.tooltip=Az el\u0151rehozott elem nincs takar\u00e1sban
