--- a/VUE2/src/tufts/vue/VueResources_it.properties
+++ b/VUE2/src/tufts/vue/VueResources_it.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Italian Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -287,7 +288,7 @@ menu.content=Contenuto
 menu.pathways.editslide=Modifica Diapositiva
 menu.pathways.editmasterslide=Modifica Diapositiva Principale
 menu.pathways.handoutsandnotes=Volantini e Note
-menu.help.vuelog=VUE Log
+menu.help.vuelog=designVUE Log
 menu.windiws.openrecent=Apri Recente
 menu.windows.save=Salva
 menu.windows.saveas=Salva Come...
@@ -578,12 +579,12 @@ action.undo=Annulla
 action.redo=Rifai
 
 #Preference Dialog 
-dialog.preference.message=Devi riavviare VUE perch\u00e8 questi cambiamenti abbiano effetto.
-dialog.preference.title=Riavvia VUE
+dialog.preference.message=Devi riavviare designVUE perch\u00e8 questi cambiamenti abbiano effetto.
+dialog.preference.title=Riavvia designVUE
 
 #Preferences window
 preferences.language.title=Lingua
-preferences.language.description=Lingua da utilizzare: questo annuller\u00e0 (solo per VUE) la lingua predefinita come dedotta dalle preferenze di sistema. Devi riavviare VUE perch\u00e8 ogni cambiamento abbia effetto.
+preferences.language.description=Lingua da utilizzare: questo annuller\u00e0 (solo per designVUE) la lingua predefinita come dedotta dalle preferenze di sistema. Devi riavviare designVUE perch\u00e8 ogni cambiamento abbia effetto.
 preferences.language.loading=Caircamento...
 
 # Application Frame Dialog
@@ -640,7 +641,7 @@ optiondialog.savechages.message=Vuoi salvare i cambiamenti apportati a
 optiondialog.savechages.title=Salvare i cambiamenti?
 optiondialog.savechages.dontsave=Non Salvare
 optiondialog.savechages.save=Salvare
-dialog.initfailed.message=Inizializzazione VUE fallita
+dialog.initfailed.message=Inizializzazione designVUE fallita
 
 #Action
 dialog.activemap.message=Non ci sono mappe attive, apri una mappa valida.
@@ -728,7 +729,7 @@ jbutton.load.label=Carica
 pane.dataset.message=Seleziona il tipo insieme dati
 
 #PreferenceDailog
-preferencedailog.vuepreference=Preferenze VUE
+preferencedailog.vuepreference=Preferenze designVUE
 preferencedailog.mapdisplay=Mostra Mappa
 preferencedailog.images=Immagini
 
@@ -904,12 +905,12 @@ actionutil.filecorrupted.error=Errore Salva; il file mappa potrebbe essere corro
 actionutil.filecorrupted.description=Descrizione Problema
 actionutil.internalsave.title=Errore Slava Interno
 actionutil.notifyversion.message=Il file %s \u00e8 stato salvato con la nuova versione di VUE attualmente aperto.
-actionutil.notifyversion.datamodel=Il modello dati in questa mappa \u00e8 #%d, questa versione di VUE interpreta solamente i dati fino al modello #%d.
+actionutil.notifyversion.datamodel=Il modello dati in questa mappa \u00e8 #%d, questa versione di designVUE interpreta solamente i dati fino al modello #%d.
 actionutil.notifyversion.savedversion=Versione di VUE con cui \u00e8 stato salvato questo file
-actionutil.notifyversion.currentversion=Versione di VUE attualmente aperto
-actionutil.notifyversion.vuebuilt=VUE built
-actionutil.notifyversion.displaymap=Questa versione di VUE potrebbe non visualizzare la mappa correttamente.  Saving
-actionutil.notifyversion.corruptmap=Questa mappa con questa versione di VUE potrebbe risultare corrotta.
+actionutil.notifyversion.currentversion=Versione di designVUE attualmente aperto
+actionutil.notifyversion.vuebuilt=designVUE built
+actionutil.notifyversion.displaymap=Questa versione di designVUE potrebbe non visualizzare la mappa correttamente.  Saving
+actionutil.notifyversion.corruptmap=Questa mappa con questa versione di designVUE potrebbe risultare corrotta.
 actionutil.notifyversion.versionwarning=Avviso di Versione %s
 actionutil.filenotfound.error=Impossibile Trovare
 actionutil.filenotfound.title=File Non Trovato
@@ -921,7 +922,7 @@ imagemap.fileexists.warning=Immagina png gi\u00e0 esistente, sovrascriverla?
 imagemap.fileexists.title=File Gi\u00e0 Esistente
 
 #OpenAction
-openaction.mapopen.error=La mappa seguente non pu\u00f2 essere aperta con la versione corrente di VUE.
+openaction.mapopen.error=La mappa seguente non pu\u00f2 essere aperta con la versione corrente di designVUE.
 openaction.mapopen.title=Errore Apertura Mappa.
 openaction.mapnotfound.error=File non trovato.
 openaction.mapnotfound.title=Mappa Non Trovata.
@@ -931,7 +932,7 @@ openaction.openmapproblem.title=Problema nell'apertura della Mappa.
 publishdatasourceaction.title=Errore Pubblicazione
 
 #RFDOpenAction
-rfdopenaction.openfile.error=Non pu\u00f2 essere aperto con questa versione di VUE.
+rfdopenaction.openfile.error=Non pu\u00f2 essere aperto con questa versione di designVUE.
 rfdopenaction.openfile.title=Errore Apertura Mappa
 
 #SaveAction
@@ -940,7 +941,7 @@ saveaction.targetfiel=Il file di destinazione era '%s'
 saveaction.savemap.error=Si \u00e8 verificato un errore durante il salvataggio della mappa
 saveaction.saveacopy=Salva un copia
 saveaction.save=Salva
-dialog.saveaction.message=Salvare {0} con questa versione di VUE impedir\u00e0 alle versioni precedenti di VUE di visualizzarla correttamente. Potresti salvare questa mappa con un altro nome.
+dialog.saveaction.message=Salvare {0} con questa versione di designVUE impedir\u00e0 alle versioni precedenti di VUE di visualizzarla correttamente. Potresti salvare questa mappa con un altro nome.
 dialog.saveaction.title=Avviso di Versione {0}
 
 #OntologyList
@@ -1084,7 +1085,7 @@ jlabel.more=<< di pi\u00f9
 jlabel.less=meno >>
 jlabel.resourcemetadata=Risorsa Metadata
 jlabel.all=Tutto
-jlabel.newversion=E' disponibile una versione di VUE pi\u00f9 recente
+jlabel.newversion=E' disponibile una versione di designVUE pi\u00f9 recente
 jlabel.assetdisplayoffline=Mostra Risorsa Offline
 showagaindialog.donotshow.tooltip=non mostrare di nuovo 
 vuemenubar.printvisible.tooltip=Stampa Visibile
@@ -1399,7 +1400,7 @@ quickImport.selectfile=Seleziona:
 quickImport.browse=Naviga
 quickImport.cancel=Annulla
 quickImport.add=Aggiungi
-quickImport.help=<html>Aggiungi un contenuto in una nuova mappa VUE. I file tipo CSV, XML, RSS, RDF, OWL <br>e le cartelle (di immagini o file) sono supportate.  I file tipo CSV, XML e RSS <br>saranno aggiunti nella scheda Insieme Dati all'interno della finestra Contenuto.</html>
+quickImport.help=<html>Aggiungi un contenuto in una nuova mappa designVUE. I file tipo CSV, XML, RSS, RDF, OWL <br>e le cartelle (di immagini o file) sono supportate.  I file tipo CSV, XML e RSS <br>saranno aggiunti nella scheda Insieme Dati all'interno della finestra Contenuto.</html>
 
 menu.format.arrange.sendtoback.tooltip=Assicurarsi che questo oggetto non ne nascondi nessun altro.
 menu.format.arrange.bringtofront.tooltip=Porta l'oggetto davanti a tutti, completamente visibile.
