--- a/VUE2/src/tufts/vue/VueResources_pt_BR.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_BR.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Brazilian Portuguese Language File
 # May 24, 2010
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file versions
@@ -289,7 +290,7 @@ menu.content=Conte\u00fado
 menu.pathways.editslide=Editar Slide
 menu.pathways.editmasterslide=Editar Slide Mestre
 menu.pathways.handoutsandnotes=Folhetos e Notas
-menu.help.vuelog=Registros do VUE
+menu.help.vuelog=Registros do designVUE
 menu.windiws.openrecent=Abrir Recente
 menu.windows.save=Salvar
 menu.windows.saveas=Salvar Como...
@@ -586,12 +587,12 @@ action.undo=Desfazer
 action.redo=Refazer
 
 #Preference Dialog 
-dialog.preference.message=Voc\u00ea deve reiniciar o VUE para que as mudan\u00e7as tenham efeito.
-dialog.preference.title=Reiniciar VUE
+dialog.preference.message=Voc\u00ea deve reiniciar o designVUE para que as mudan\u00e7as tenham efeito.
+dialog.preference.title=Reiniciar designVUE
 
 #Preferences window 
 preferences.language.title=Idioma
-preferences.language.description=Idioma a usar: ir\u00e1 sobrepor o idioma definido no sistema (somente no VUE). Voc\u00ea deve reiniciar o VUE para que a mudan\u00e7a tenha efeito.
+preferences.language.description=Idioma a usar: ir\u00e1 sobrepor o idioma definido no sistema (somente no designVUE). Voc\u00ea deve reiniciar o designVUE para que a mudan\u00e7a tenha efeito.
 preferences.language.loading=Carregando...
 
 # Application Frame Dialog 
@@ -648,7 +649,7 @@ optiondialog.savechages.message=Voc\u00ea quer salvar as modan\u00e7as que fez e
 optiondialog.savechages.title=Salvar mudan\u00e7as?
 optiondialog.savechages.dontsave=N\u00e3o Salvar
 optiondialog.savechages.save=Salvar
-dialog.initfailed.message=Problemas ao iniciar o VUE
+dialog.initfailed.message=Problemas ao iniciar o designVUE
 
 #Action 
 dialog.activemap.message=N\u00e3o h\u00e1 um mapa ativo. Por favor, abra um mapa v\u00e1lido.
@@ -736,7 +737,7 @@ jbutton.load.label=Carregar
 pane.dataset.message=Selecione o tipo de conjunto de dados, por favor
 
 #PreferenceDialog 
-preferencedailog.vuepreference=Prefer\u00eancias do VUE
+preferencedailog.vuepreference=Prefer\u00eancias do designVUE
 preferencedailog.mapdisplay=Exibi\u00e7\u00e3o do Mapa
 preferencedailog.images=Imagens
 
@@ -918,12 +919,12 @@ actionutil.filecorrupted.error=Erro ao Salvar: o mapa pode estar corrompido -- t
 actionutil.filecorrupted.description=Descri\u00e7\u00e3o do Problema
 actionutil.internalsave.title=Erro Interno de Salvamento
 actionutil.notifyversion.message=O arquivo %s foi salvo em uma vers\u00e3o do VUE mais nova do que a que est\u00e1 executando.
-actionutil.notifyversion.datamodel=O modelo de dados neste mapa \u00e9 #%d, e esta vers\u00e3o de VUE s\u00f3 compreende at\u00e9 o modelo #%d.
+actionutil.notifyversion.datamodel=O modelo de dados neste mapa \u00e9 #%d, e esta vers\u00e3o de designVUE s\u00f3 compreende at\u00e9 o modelo #%d.
 actionutil.notifyversion.savedversion=Vers\u00e3o do VUE que salvou este arquivo
-actionutil.notifyversion.currentversion=Vers\u00e3o do VUE atualmente em execu\u00e7\u00e3o
-actionutil.notifyversion.vuebuilt=Cria\u00e7\u00e3o do VUE
-actionutil.notifyversion.displaymap=Esta vers\u00e3o do VUE pode n\u00e3o exibir o mapa apropriadamente. Salvando
-actionutil.notifyversion.corruptmap=Este mapa pode ser corrompido nesta vers\u00e3o do VUE.
+actionutil.notifyversion.currentversion=Vers\u00e3o do designVUE atualmente em execu\u00e7\u00e3o
+actionutil.notifyversion.vuebuilt=Cria\u00e7\u00e3o do designVUE
+actionutil.notifyversion.displaymap=Esta vers\u00e3o do designVUE pode n\u00e3o exibir o mapa apropriadamente. Salvando
+actionutil.notifyversion.corruptmap=Este mapa pode ser corrompido nesta vers\u00e3o do designVUE.
 actionutil.notifyversion.versionwarning=Aviso de Vers\u00e3o %s
 actionutil.filenotfound.error=N\u00e3o Pode Encontrar
 actionutil.filenotfound.title=Arquivo N\u00e3o Encontrado
@@ -935,7 +936,7 @@ imagemap.fileexists.warning=A imagem png j\u00e1 existe. Substituir?
 imagemap.fileexists.title=O Arquivo J\u00e1 Existe
 
 #OpenAction 
-openaction.mapopen.error=O mapa n\u00e3o pode ser aberto na vers\u00e3o atual do VUE.
+openaction.mapopen.error=O mapa n\u00e3o pode ser aberto na vers\u00e3o atual do designVUE.
 openaction.mapopen.title=Erro de Abertura de Mapa
 openaction.mapnotfound.error=O arquivo n\u00e3o foi encontrado.
 openaction.mapnotfound.title=Mapa N\u00e3o Encontrado
@@ -945,7 +946,7 @@ openaction.openmapproblem.title=Problemas ao Abrir o Mapa
 publishdatasourceaction.title=Erro de Publica\u00e7\u00e3o
 
 #RFDOpenAction 
-rfdopenaction.openfile.error=n\u00e3o pode ser aberto nesta vers\u00e3o do VUE.
+rfdopenaction.openfile.error=n\u00e3o pode ser aberto nesta vers\u00e3o do designVUE.
 rfdopenaction.openfile.title=Erro de Abertura de Mapa
 
 #SaveAction 
@@ -954,7 +955,7 @@ saveaction.targetfiel=O arquivo alvo foi '%s'
 saveaction.savemap.error=Houve um erro ao salvar o mapa
 saveaction.saveacopy=Salvar uma c\u00f3pia
 saveaction.save=Salvar
-dialog.saveaction.message=Salvar {0} nesta vers\u00e3o do VUE impedir\u00e1 que vers\u00f5es antigas mostrem-no apropriadamente. Voc\u00ea pode querer salvar este mapa com um novo nome.
+dialog.saveaction.message=Salvar {0} nesta vers\u00e3o do designVUE impedir\u00e1 que vers\u00f5es antigas mostrem-no apropriadamente. Voc\u00ea pode querer salvar este mapa com um novo nome.
 dialog.saveaction.title=Aviso da Vers\u00e3o {0}
 
 #OntologyList 
@@ -1099,7 +1100,7 @@ jlabel.more=<< mais
 jlabel.less=menos >>
 jlabel.resourcemetadata=Metadados do Recurso
 jlabel.all=Tudo
-jlabel.newversion=Uma nova vers\u00e3o do VUE est\u00e1 dispon\u00edvel
+jlabel.newversion=Uma nova vers\u00e3o do designVUE est\u00e1 dispon\u00edvel
 jlabel.assetdisplayoffline=Exibi\u00e7\u00e3o de Ativos Desativada
 showagaindialog.donotshow.tooltip=n\u00e3o mostre novamente
 vuemenubar.printvisible.tooltip=Imprimir Vis\u00edvel
@@ -1418,7 +1419,7 @@ quickImport.selectfile=Local:
 quickImport.browse=Navegar
 quickImport.cancel=Cancelar
 quickImport.add=Adicionar
-quickImport.help=<html>Adicionar conte\u00fado a um novo mapa VUE. Arquivos CSV, XML, RSS, RDF, OWL <br>e pastas (arquivos ou imagens) s\u00e3o suportados. Arquivos CSV, XML, and RSS <br>ser\u00e3o adicionados \u00e0 aba de Conjuntos de Dados da janela Conte\u00fado.</html>
+quickImport.help=<html>Adicionar conte\u00fado a um novo mapa designVUE. Arquivos CSV, XML, RSS, RDF, OWL <br>e pastas (arquivos ou imagens) s\u00e3o suportados. Arquivos CSV, XML, and RSS <br>ser\u00e3o adicionados \u00e0 aba de Conjuntos de Dados da janela Conte\u00fado.</html>
 
 # Java Analysis 
 menu.windows.java=Java...
