--- a/VUE2/src/tufts/vue/VueResources_pt_PT.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_PT.properties
@@ -1,6 +1,7 @@
 #============================================================================================================
 # VUE Portuguese (PT) Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -250,7 +251,7 @@ menu.content=Conte\u00fados
 menu.pathways.editslide=Editar Diapositivo
 menu.pathways.editmasterslide=Editar Modelo de Diapositivos
 menu.pathways.handoutsandnotes=Folhetos e Notas
-menu.help.vuelog=Registos do VUE
+menu.help.vuelog=Registos do designVUE
 menu.windiws.openrecent=Documentos Recentes
 menu.windows.save=Guardar
 menu.windows.saveas=Guardar Como...
@@ -519,8 +520,8 @@ action.undo=Anular
 action.redo=Refazer
 
 #Preference Dialog 
-dialog.preference.message=Deve reiniciar o VUE para que as altera\u00e7\u00f5es tenham efeito.
-dialog.preference.title=Reiniciar o VUE
+dialog.preference.message=Deve reiniciar o designVUE para que as altera\u00e7\u00f5es tenham efeito.
+dialog.preference.title=Reiniciar o designVUE
 
 # Application Frame Dialog
 dialog.addurlaction.message=Hiperliga\u00e7\u00e3o mal formada, o recurso n\u00e3o pode ser adicionado.
@@ -573,7 +574,7 @@ optiondialog.savechages.message=Deseja guardar as altera\u00e7\u00f5es realizada
 optiondialog.savechages.title=Guardar altera\u00e7\u00f5es?
 optiondialog.savechages.dontsave=N\u00e3o guardar
 optiondialog.savechages.save=Guardar
-dialog.initfailed.message=Erro ao iniciar o VUE
+dialog.initfailed.message=Erro ao iniciar o designVUE
 
 #Action
 dialog.activemap.message=N\u00e3o h\u00e1 um mapa activo, por favor abra um mapa v\u00e1lido.
@@ -656,7 +657,7 @@ jbutton.load.label=Carregar
 pane.dataset.message=Por favor seleccione o tipo de dados
 
 #PreferenceDailog
-preferencedailog.vuepreference=Prefer\u00eancias do VUE
+preferencedailog.vuepreference=Prefer\u00eancias do designVUE
 preferencedailog.mapdisplay=Apresenta\u00e7\u00e3o de Mapas
 preferencedailog.images=Imagens
 
@@ -831,12 +832,12 @@ actionutil.filecorrupted.error=Erro ao guardar. O ficheiro de mapa pode estar co
 actionutil.filecorrupted.description=Descri\u00e7\u00e3o do problema
 actionutil.internalsave.title=Erro interno de grava\u00e7\u00e3o
 actionutil.notifyversion.message=O ficheiro %s foi guardado com uma vers\u00e3o do VUE posterior \u00e0 que est\u00e1 a utilizar.
-actionutil.notifyversion.datamodel=O modelo de dados deste mapa \su00e9 #%d e esta vers\u00e3o do VUE, somente entende at\u00e9 ao modelo #%d.
+actionutil.notifyversion.datamodel=O modelo de dados deste mapa \su00e9 #%d e esta vers\u00e3o do designVUE, somente entende at\u00e9 ao modelo #%d.
 actionutil.notifyversion.savedversion=Vers\u00e3o do VUE que guardou este ficheiro
-actionutil.notifyversion.currentversion=Actual vers\u00e3o do VUE em execu\u00e7\u00e3o
-actionutil.notifyversion.vuebuilt=Constru\u00e7\u00e3o do VUE
-actionutil.notifyversion.displaymap=Esta vers\u00e3o de VUE pode n\u00e3o mostrar o mapa correctamente. A guardar...
-actionutil.notifyversion.corruptmap=Nesta vers\u00e3o do VUE, o mapa pode ser corrompido.
+actionutil.notifyversion.currentversion=Actual vers\u00e3o do designVUE em execu\u00e7\u00e3o
+actionutil.notifyversion.vuebuilt=Constru\u00e7\u00e3o do designVUE
+actionutil.notifyversion.displaymap=Esta vers\u00e3o de designVUE pode n\u00e3o mostrar o mapa correctamente. A guardar...
+actionutil.notifyversion.corruptmap=Nesta vers\u00e3o do designVUE, o mapa pode ser corrompido.
 actionutil.notifyversion.versionwarning=Aviso da Vers\u00e3o %s
 actionutil.filenotfound.error=N\u00e3o consegue encontrar
 actionutil.filenotfound.title=Ficheiro n\u00e3o encontrado
@@ -848,7 +849,7 @@ imagemap.fileexists.warning=A imagem PNG j\u00e1 existe. Substituir?
 imagemap.fileexists.title=Ficheiro j\u00e1 existe
 
 #OpenAction
-openaction.mapopen.error=O mapa seguinte n\u00e3o pode ser aberto na vers\u00e3o actual do VUE.
+openaction.mapopen.error=O mapa seguinte n\u00e3o pode ser aberto na vers\u00e3o actual do designVUE.
 openaction.mapopen.title=Erro ao abrir o mapa
 openaction.mapnotfound.error=Ficheiro n\u00e3o encontrado.
 openaction.mapnotfound.title=Mapa n\u00e3o encontrado
@@ -858,7 +859,7 @@ openaction.openmapproblem.title=Problema ao abrir o mapa
 publishdatasourceaction.title=Erro na publica\u00e7\u00e3o
 
 #RFDOpenAction
-rfdopenaction.openfile.error=n\u00e3o pode ser aberto com esta vers\u00e3o do VUE.
+rfdopenaction.openfile.error=n\u00e3o pode ser aberto com esta vers\u00e3o do designVUE.
 rfdopenaction.openfile.title=Erro ao abrir o mapa
 
 #SaveAction
@@ -867,7 +868,7 @@ saveaction.targetfiel=O ficheiro de destino \u00e9 '%s'
 saveaction.savemap.error=Ocorreu um erro ao guardar o mapa
 saveaction.saveacopy=Guardar uma c\u00f3pia
 saveaction.save=Guardar
-dialog.saveaction.message=Guardar {0} nesta vers\u00e3o do VUE pode impedir que vers\u00f5es anteriores n\u00e3o abram correctamente este ficheiro. Talves prefira guardar este mapa com um novo nome.
+dialog.saveaction.message=Guardar {0} nesta vers\u00e3o do designVUE pode impedir que vers\u00f5es anteriores n\u00e3o abram correctamente este ficheiro. Talves prefira guardar este mapa com um novo nome.
 dialog.saveaction.title=Aviso da vers\u00e3o {0}
 
 #OntologyList
@@ -993,7 +994,7 @@ jlabel.more=<< mais
 jlabel.less=menos >>
 jlabel.resourcemetadata=Metadados dos Recursos
 jlabel.all=Tudo
-jlabel.newversion=Uma nova vers\u00e3o do VUE est\u00e1 dispon\u00edvel!
+jlabel.newversion=Uma nova vers\u00e3o do designVUE est\u00e1 dispon\u00edvel!
 jlabel.assetdisplayoffline=Apresenta\u00e7\u00e3o dos Activos no Modo Desligado
 showagaindialog.donotshow.tooltip=n\u00e3o mostrar novamente
 vuemenubar.printvisible.tooltip=Imprimir Vis\u00edveis
@@ -1175,7 +1176,7 @@ action.image.show=Mostrar Imagem
 
 #Preferences window
 preferences.language.title=Idioma
-preferences.language.description=Idioma a usar: isto ir\u00e1 sobrepor (apenas no VUE) o idioma escolhido nas prefer\u00eancias do sistema. Ter\u00e1 que reiniciar o VUE para que as altera\u00e7\u00f5es tenham efeito.
+preferences.language.description=Idioma a usar: isto ir\u00e1 sobrepor (apenas no designVUE) o idioma escolhido nas prefer\u00eancias do sistema. Ter\u00e1 que reiniciar o designVUE para que as altera\u00e7\u00f5es tenham efeito.
 preferences.language.loading=A carregar...
 
 pathwaytable.menu.pathway=Menu do Caminho
@@ -1333,7 +1334,7 @@ im.button.zoom=Manter o mapa a 100%
 im.button.enforce=Limitar n.\u00ba de colunas a
 im.approve.message=Deseja permitir {0} a contribuir neste mapa?
 im.title = AOL IM
-im.preference.description=O AOL Instant Messenger \u00e9 uma funcionalidade experimental no painel "Informa\u00e7\u00e3o do Mapa"; para usar esta funcionalidade, active-a e reinicie o VUE.
+im.preference.description=O AOL Instant Messenger \u00e9 uma funcionalidade experimental no painel "Informa\u00e7\u00e3o do Mapa"; para usar esta funcionalidade, active-a e reinicie o designVUE.
 im.preference.message=Activar o AOL Instant Messenger
 
 #Interaction Tools window
@@ -1355,7 +1356,7 @@ interactionTools.off=0
 
 #SEASR
 seasr.analysis.title=An\u00e1lise SEASR
-seasr.analysis.subtitle=Analisar uma p\u00e1gina web usando o ambiente Seasr e devolve os resultados para o VUE
+seasr.analysis.subtitle=Analisar uma p\u00e1gina web usando o ambiente Seasr e devolve os resultados para o designVUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1446,7 +1447,7 @@ quickImport.selectfile=Localiza\u00e7\u00e3o:
 quickImport.browse=Procurar
 quickImport.cancel=Cancelar
 quickImport.add=Adicionar
-quickImport.help=<html>Adicionar conte\u00fado a um novo mapa VUE.<br>CSV, XML, RSS, RDF, OWL, ficheiros<br>(imagens e outros ficheiros) e Pastas.<br>Ficheiros CSV, XML e RSS ser\u00e3o adicionados<br>ao separador "Dados" da janela "Conte\u00fados".</html>
+quickImport.help=<html>Adicionar conte\u00fado a um novo mapa designVUE.<br>CSV, XML, RSS, RDF, OWL, ficheiros<br>(imagens e outros ficheiros) e Pastas.<br>Ficheiros CSV, XML e RSS ser\u00e3o adicionados<br>ao separador "Dados" da janela "Conte\u00fados".</html>
 
 menu.format.arrange.sendtoback.tooltip=Certifique-se que o objecto seleccionado n\u00e3o ocultar\u00e1 um outro
 menu.format.arrange.bringtofront.tooltip=Eleva o objecto seleccionado para o topo revelando-o totalmente
@@ -1475,7 +1476,7 @@ analyze.java.analyzeInnerInterfaces=Incluir interfaces internas
 analyze.java.error=Ocurreu um erro durante a An\u00e1lise Java.
 analyze.java.parsing=a analisar...
 analyze.java.displaying=a gerar a visualiza\u00e7\u00e3o...
-analyze.java.preference.description=A An\u00e1lise Java \u00e9 uma funcionalidade experimental no Menu "An\u00e1lise"; para usar esta funcionalidade, active-a e reinicie o VUE.
+analyze.java.preference.description=A An\u00e1lise Java \u00e9 uma funcionalidade experimental no Menu "An\u00e1lise"; para usar esta funcionalidade, active-a e reinicie o designVUE.
 analyze.java.preference.message=Activar a An\u00e1lise Java
 
 # HTML Output sizing dialog
