--- a/VUE2/src/tufts/vue/VueResources_ro.properties
+++ b/VUE2/src/tufts/vue/VueResources_ro.properties
@@ -2,6 +2,7 @@
 # VUE Romanian Language File
 # October 21, 2009
 # Kosson Fecit 2010
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -292,7 +293,7 @@ menu.content=Con\u021binut
 menu.pathways.editslide=Editeaz\u0103 slide
 menu.pathways.editmasterslide=Editeaz\u0103 slide-ul master
 menu.pathways.handoutsandnotes=Foi volante \u0219i note
-menu.help.vuelog=Jurnalier VUE
+menu.help.vuelog=Jurnalier designVUE
 menu.windiws.openrecent=Deschide ultimele
 menu.windows.save=Salveaz\u0103
 menu.windows.saveas=Salveaz\u0103 ca...
@@ -587,12 +588,12 @@ action.undo=Anuleaz\u0103
 action.redo=Ref\u0103
 
 #Preference Dialog 
-dialog.preference.message=Trebuie s\u0103 reporne\u0219ti VUE pentru ca aceast\u0103 modificare s\u0103 aib\u0103 efect.
-dialog.preference.title=Reporne\u0219te VUE
+dialog.preference.message=Trebuie s\u0103 reporne\u0219ti designVUE pentru ca aceast\u0103 modificare s\u0103 aib\u0103 efect.
+dialog.preference.title=Reporne\u0219te designVUE
 
 #Preferences window
 preferences.language.title=Limba
-preferences.language.description=Limba de utilizare: va avea ca efect selectarea (doar pentru programul VUE) a limbii ca preferin\u021b\u0103 pentru sistem. Pentru a avea efect, trebuie repornit VUE.
+preferences.language.description=Limba de utilizare: va avea ca efect selectarea (doar pentru programul designVUE) a limbii ca preferin\u021b\u0103 pentru sistem. Pentru a avea efect, trebuie repornit designVUE.
 preferences.language.loading=\u00cenc\u0103rcare...
 
 # Application Frame Dialog
@@ -649,7 +650,7 @@ optiondialog.savechages.message=Vrei s\u0103 salvezi modific\u0103rile f\u0103cu
 optiondialog.savechages.title=Salvezi modific\u0103rile?
 optiondialog.savechages.dontsave=Nu salva
 optiondialog.savechages.save=Salveaz\u0103
-dialog.initfailed.message=Ini\u021bializare VUE nereu\u0219it\u0103
+dialog.initfailed.message=Ini\u021bializare designVUE nereu\u0219it\u0103
 
 #Action
 dialog.activemap.message=Nu exist\u0103 nicio hart\u0103 activ\u0103. Deschide o hart\u0103 potrivit\u0103.
@@ -737,7 +738,7 @@ jbutton.load.label=\u00cencarc\u0103
 pane.dataset.message=Selecteaz\u0103 tipul de seturi de date
 
 #PreferenceDailog
-preferencedailog.vuepreference=Preferin\u021be VUE
+preferencedailog.vuepreference=Preferin\u021be designVUE
 preferencedailog.mapdisplay=Afi\u0219area h\u0103r\u021bii
 preferencedailog.images=Imagini
 
@@ -919,12 +920,12 @@ actionutil.filecorrupted.error=Eroare de salvare; fi\u0219ierul h\u0103r\u021bii
 actionutil.filecorrupted.description=Descrierea problemei
 actionutil.internalsave.title=Eroare intern\u0103 de salvare
 actionutil.notifyversion.message=Fi\u0219ierul %s a fost salvat \u00eentr-o versiune mai nou\u0103 de VUE dec\u00e2t cea pe care o rulezi.
-actionutil.notifyversion.datamodel=Modelul de date din aceast\u0103 hart\u0103 este #%d, iar aceast\u0103 versiune de VUE \u00een\u021belege doar p\u00e2n\u0103 la modelul #%d.
+actionutil.notifyversion.datamodel=Modelul de date din aceast\u0103 hart\u0103 este #%d, iar aceast\u0103 versiune de designVUE \u00een\u021belege doar p\u00e2n\u0103 la modelul #%d.
 actionutil.notifyversion.savedversion=Versiunea de VUE care a salvat acest fi\u0219ier
-actionutil.notifyversion.currentversion=Versiunea curent\u0103 de VUE
-actionutil.notifyversion.vuebuilt=Versiunea compilat\u0103 VUE
-actionutil.notifyversion.displaymap=E posibil ca aceast\u0103 versiune de VUE s\u0103 nu afi\u0219eze aceast\u0103 hart\u0103 \u00een mod corespunz\u0103tor. Salvare
-actionutil.notifyversion.corruptmap=aceast\u0103 hart\u0103 \u00een aceast\u0103 versiune de VUE poate avea ca rezultat o hart\u0103 corupt\u0103.
+actionutil.notifyversion.currentversion=Versiunea curent\u0103 de designVUE
+actionutil.notifyversion.vuebuilt=Versiunea compilat\u0103 designVUE
+actionutil.notifyversion.displaymap=E posibil ca aceast\u0103 versiune de designVUE s\u0103 nu afi\u0219eze aceast\u0103 hart\u0103 \u00een mod corespunz\u0103tor. Salvare
+actionutil.notifyversion.corruptmap=aceast\u0103 hart\u0103 \u00een aceast\u0103 versiune de designVUE poate avea ca rezultat o hart\u0103 corupt\u0103.
 actionutil.notifyversion.versionwarning=Avertisment privind versiunea %s
 actionutil.filenotfound.error=Nu am putut g\u0103si
 actionutil.filenotfound.title=Fi\u0219ierul nu a putut fi g\u0103sit
@@ -936,7 +937,7 @@ imagemap.fileexists.warning=imaginea png exist\u0103 deja, suprascrie\u021bi?
 imagemap.fileexists.title=Fi\u0219ierul exist\u0103 deja
 
 #OpenAction
-openaction.mapopen.error=Harta nu poate fi deschis\u0103 \u00een versiunea curent\u0103 a VUE.
+openaction.mapopen.error=Harta nu poate fi deschis\u0103 \u00een versiunea curent\u0103 a designVUE.
 openaction.mapopen.title=Eroare la deschiderea h\u0103r\u021bii
 openaction.mapnotfound.error=Fi\u0219ier inexistent.
 openaction.mapnotfound.title=Hart\u0103 inexistent\u0103
@@ -946,7 +947,7 @@ openaction.openmapproblem.title=Probleme la deschiderea h\u0103r\u021bii
 publishdatasourceaction.title=Eroare la publicare
 
 #RFDOpenAction
-rfdopenaction.openfile.error=Nu poate fi deschis \u00een aceast\u0103 versiune de VUE.
+rfdopenaction.openfile.error=Nu poate fi deschis \u00een aceast\u0103 versiune de designVUE.
 rfdopenaction.openfile.title=Eroare la deschiderea h\u0103r\u021bii
 
 #SaveAction
@@ -955,7 +956,7 @@ saveaction.targetfiel=Fi\u0219ierul \u021bint\u0103 a fost '%s'
 saveaction.savemap.error=Exist\u0103 o eroare la salvarea h\u0103r\u021bii
 saveaction.saveacopy=Salveaz\u0103 o copie
 saveaction.save=Salveaz\u0103
-dialog.saveaction.message=Salvarea {0} \u00een aceast\u0103 versiune de VUE va \u00eempiedica afi\u0219area corect\u0103 \u00een versiunile mai vechi de VUE. A\u021bi putea alege salvarea acestei h\u0103r\u021bi sub un nume nou.
+dialog.saveaction.message=Salvarea {0} \u00een aceast\u0103 versiune de designVUE va \u00eempiedica afi\u0219area corect\u0103 \u00een versiunile mai vechi de VUE. A\u021bi putea alege salvarea acestei h\u0103r\u021bi sub un nume nou.
 dialog.saveaction.title=Not\u0103 privind versiunea {0}
 
 #OntologyList
@@ -1101,7 +1102,7 @@ jlabel.more=<< incrementare
 jlabel.less=decrementare >>
 jlabel.resourcemetadata=Metadatele resursei
 jlabel.all=Toate
-jlabel.newversion=O nou\u0103 versiune VUE este disponibil\u0103
+jlabel.newversion=O nou\u0103 versiune designVUE este disponibil\u0103
 jlabel.assetdisplayoffline=Afi\u0219area resurselor nu e posibil\u0103
 showagaindialog.donotshow.tooltip=nu mai ar\u0103ta \u00eenc\u0103 o dat\u0103 
 vuemenubar.printvisible.tooltip=Printeaz\u0103 ceea ce este vizibil
@@ -1416,7 +1417,7 @@ quickImport.selectfile=Loca\u021bie:
 quickImport.browse=Caut\u0103
 quickImport.cancel=Anuleaz\u0103
 quickImport.add=Adaug\u0103
-quickImport.help=<html>Adaug\u0103 con\u021binut la noua hart\u0103 VUE. Fi\u0219iere CSV, XML, RSS, RDF, OWL <br>\u0219i directoare (imagini sau fi\u0219iere) sunt suportate. Fi\u0219iere CSV, XML, \u0219i RSS <br>Vor fi ad\u0103ugate la sec\u021biunea seturilor de date din fereastra con\u021binutului.</html>
+quickImport.help=<html>Adaug\u0103 con\u021binut la noua hart\u0103 designVUE. Fi\u0219iere CSV, XML, RSS, RDF, OWL <br>\u0219i directoare (imagini sau fi\u0219iere) sunt suportate. Fi\u0219iere CSV, XML, \u0219i RSS <br>Vor fi ad\u0103ugate la sec\u021biunea seturilor de date din fereastra con\u021binutului.</html>
 
 # Java Analysis
 menu.windows.java=Java...
@@ -1434,7 +1435,7 @@ analyze.java.analyzeInnerInterfaces=Incluz\u00e2nd interfe\u021bele interne
 analyze.java.error=A ap\u0103rut o eroare \u00een timpul analizei Java.
 analyze.java.parsing=analiz\u0103...
 analyze.java.displaying=afi\u0219are...
-analyze.java.preference.description=Analiza Java este o func\u021bionalitate experimental\u0103 prezent\u0103 \u00een meniul de analiz\u0103; pentru a testa aceast\u0103 func\u021bionalitate, activeaz-o \u0219i reporne\u0219te VUE.
+analyze.java.preference.description=Analiza Java este o func\u021bionalitate experimental\u0103 prezent\u0103 \u00een meniul de analiz\u0103; pentru a testa aceast\u0103 func\u021bionalitate, activeaz-o \u0219i reporne\u0219te designVUE.
 analyze.java.preference.message=Activeaz\u0103 analiza Java
 
 # HTML Output sizing dialog
