--- a/VUE2/src/tufts/vue/VueResources_sk.properties
+++ b/VUE2/src/tufts/vue/VueResources_sk.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Slovakian Language File
 # March 14, 2010
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -287,7 +288,7 @@ menu.content=Obsah
 menu.pathways.editslide=Upravi\u0165 sn\u00edmok
 menu.pathways.editmasterslide=Upravi\u0165 hlavn\u00fd sn\u00edmok
 menu.pathways.handoutsandnotes=Prospekty a pozn\u00e1mky
-menu.help.vuelog=VUE z\u00e1znamy
+menu.help.vuelog=designVUE z\u00e1znamy
 menu.windiws.openrecent=Otvori\u0165 predo\u0161l\u00e9
 menu.windows.save=Ulo\u017ei\u0165
 menu.windows.saveas=Ulo\u017ei\u0165 ako...
@@ -578,12 +579,12 @@ action.undo=Vr\u00e1ti\u0165
 action.redo=Znovu
 
 #Preference Dialog 
-dialog.preference.message=Mus\u00edte restartova\u0165 VUE aby sa prejavili zmeny.
-dialog.preference.title=Re\u0161tartova\u0165 VUE
+dialog.preference.message=Mus\u00edte restartova\u0165 designVUE aby sa prejavili zmeny.
+dialog.preference.title=Re\u0161tartova\u0165 designVUE
 
 #Preferences window
 preferences.language.title=Jazyk
-preferences.language.description=Zvolen\u00fd jazyk: bude zmenen\u00fd jazyk. Mus\u00edte re\u0161tartova\u0165 VUE, aby sa prejavili ak\u00e9ko\u013evek zmeny. 
+preferences.language.description=Zvolen\u00fd jazyk: bude zmenen\u00fd jazyk. Mus\u00edte re\u0161tartova\u0165 designVUE, aby sa prejavili ak\u00e9ko\u013evek zmeny. 
 preferences.language.loading=Na\u010d\u00edtavam...
 
 # Application Frame Dialog
@@ -640,7 +641,7 @@ optiondialog.savechages.message=Chcete ulo\u017ei\u0165 zmeny, ktor\u00e9 ste ur
 optiondialog.savechages.title=Ulo\u017ei\u0165 zmeny?
 optiondialog.savechages.dontsave=Neulo\u017ei\u0165
 optiondialog.savechages.save=Ulo\u017ei\u0165
-dialog.initfailed.message=Sp\u00fa\u0161\u0165anie VUE zlyhalo
+dialog.initfailed.message=Sp\u00fa\u0161\u0165anie designVUE zlyhalo
 
 #Action
 dialog.activemap.message=Nie je akt\u00edvna \u017eiadna mapa, pros\u00edm, otvorte platn\u00fa mapu.
@@ -728,7 +729,7 @@ jbutton.load.label=Nahra\u0165
 pane.dataset.message=Pros\u00edm vyberte druh inform\u00e1ci\u00ed
 
 #PreferenceDailog
-preferencedailog.vuepreference=VUE Nastavenia
+preferencedailog.vuepreference=designVUE Nastavenia
 preferencedailog.mapdisplay=Zobrazenie mapy
 preferencedailog.images=Obr\u00e1zky
 
@@ -887,12 +888,12 @@ actionutil.filecorrupted.error=Chyba ukladania; s\u00fabor mapy m\u00f4\u017ee b
 actionutil.filecorrupted.description=Popis probl\u00e9mu
 actionutil.internalsave.title=Vn\u00fatorn\u00e1 chyba ukladania
 actionutil.notifyversion.message=S\u00fabor %s bol ulo\u017eeny v nov\u0161ej verzii programu VUE ako m\u00e1te teraz.
-actionutil.notifyversion.datamodel=Model \u00fadajov v tejto mape je #%d, a t\u00e1to verzia programu VUE pozn\u00e1 iba po model #%d.
+actionutil.notifyversion.datamodel=Model \u00fadajov v tejto mape je #%d, a t\u00e1to verzia programu designVUE pozn\u00e1 iba po model #%d.
 actionutil.notifyversion.savedversion=Verzia programu VUE, ktor\u00e1 ulo\u017eila tento s\u00fabor
-actionutil.notifyversion.currentversion=Teraj\u0161ia spusten\u00e1 verzia programu VUE
-actionutil.notifyversion.vuebuilt=VUE verzia
-actionutil.notifyversion.displaymap=T\u00e1to verzia programu VUE mo\u017eno nezobraz\u00ed mapu spr\u00e1vne. Ulo\u017eenie
-actionutil.notifyversion.corruptmap=tejto mapy v tejto (star\u0161ej) verzii programu VUE m\u00f4\u017ee poru\u0161i\u0165 mapu.
+actionutil.notifyversion.currentversion=Teraj\u0161ia spusten\u00e1 verzia programu designVUE
+actionutil.notifyversion.vuebuilt=designVUE verzia
+actionutil.notifyversion.displaymap=T\u00e1to verzia programu designVUE mo\u017eno nezobraz\u00ed mapu spr\u00e1vne. Ulo\u017eenie
+actionutil.notifyversion.corruptmap=tejto mapy v tejto (star\u0161ej) verzii programu designVUE m\u00f4\u017ee poru\u0161i\u0165 mapu.
 actionutil.notifyversion.versionwarning=Varovanie verzie %s
 actionutil.filenotfound.error=Nen\u00e1jden\u00e9
 actionutil.filenotfound.title=S\u00fabor nen\u00e1jden\u00fd
@@ -904,7 +905,7 @@ imagemap.fileexists.warning=PNG obr\u00e1zok u\u017e existuje, chcete ho prep\u0
 imagemap.fileexists.title=S\u00fabor u\u017e existuje
 
 #OpenAction
-openaction.mapopen.error=T\u00e1to mapa nem\u00f4\u017ee by\u0165 otvoren\u00e1 v tejto verzii programu VUE.
+openaction.mapopen.error=T\u00e1to mapa nem\u00f4\u017ee by\u0165 otvoren\u00e1 v tejto verzii programu designVUE.
 openaction.mapopen.title=Chyba otv\u00e1rania mapy
 openaction.mapnotfound.error=s\u00fabor nen\u00e1jden\u00fd
 openaction.mapnotfound.title=Mapa nen\u00e1jden\u00e1
@@ -914,7 +915,7 @@ openaction.openmapproblem.title=Probl\u00e9m otv\u00e1rania mapy
 publishdatasourceaction.title=Chyba zverejnenia
 
 #RFDOpenAction
-rfdopenaction.openfile.error=nemohol by\u0165 otvoren\u00fd v tejto verzii programu VUE.
+rfdopenaction.openfile.error=nemohol by\u0165 otvoren\u00fd v tejto verzii programu designVUE.
 rfdopenaction.openfile.title=Chyba otv\u00e1rania s\u00faboru
 
 #SaveAction
@@ -923,7 +924,7 @@ saveaction.targetfiel=Cie\u013eov\u00e1 s\u00fabor bol '%s'
 saveaction.savemap.error=Bol probl\u00e9m s ukladan\u00edm mapy
 saveaction.saveacopy=Ulo\u017ei\u0165 k\u00f3piu
 saveaction.save=Ulo\u017ei\u0165
-dialog.saveaction.message=Ulo\u017eenie {0} v tejto verzii programu VUE m\u00f4\u017ee sp\u00f4sobi\u0165 nespr\u00e1vne zobrazenie mapy v star\u0161\u00edch verzi\u00e1ch programu VUE \n .  M\u00f4\u017eete mapu ulo\u017ei\u0165 pod in\u00fdm menom.
+dialog.saveaction.message=Ulo\u017eenie {0} v tejto verzii programu designVUE m\u00f4\u017ee sp\u00f4sobi\u0165 nespr\u00e1vne zobrazenie mapy v star\u0161\u00edch verzi\u00e1ch programu VUE \n .  M\u00f4\u017eete mapu ulo\u017ei\u0165 pod in\u00fdm menom.
 dialog.saveaction.title=Upozornenie verzie {0}
 
 #OntologyList
@@ -1067,7 +1068,7 @@ jlabel.more=<< viac
 jlabel.less=menej >>
 jlabel.resourcemetadata=Meta\u00fadaje o zdroji
 jlabel.all=V\u0161etky
-jlabel.newversion=Je dostupn\u00e1 nov\u00e1 verzia programu VUE
+jlabel.newversion=Je dostupn\u00e1 nov\u00e1 verzia programu designVUE
 jlabel.assetdisplayoffline=Odpoji\u0165 zobrazenie
 showagaindialog.donotshow.tooltip=Op\u00e4\u0165 nezobrazova\u0165 
 vuemenubar.printvisible.tooltip=Vytla\u010di\u0165 vidite\u013en\u00e9
@@ -1381,7 +1382,7 @@ quickImport.selectfile=Umiestnenie:
 quickImport.browse=Prehliada\u0165
 quickImport.cancel=Zru\u0161i\u0165
 quickImport.add=Prida\u0165
-quickImport.help=<html>Prida\u0165 obsah novej VUE mape. S\u00fabory CSV, XML, RSS, RDF, OWL <br>a prie\u010dinky (obr\u00e1zky alebo s\u00fabory) s\u00fa podporovan\u00e9. CSV, XML a RSS s\u00fabory <br>bud\u00fa pridan\u00e9 do tabu\u013eky \u00fadajov Okna osahu.</html>
+quickImport.help=<html>Prida\u0165 obsah novej designVUE mape. S\u00fabory CSV, XML, RSS, RDF, OWL <br>a prie\u010dinky (obr\u00e1zky alebo s\u00fabory) s\u00fa podporovan\u00e9. CSV, XML a RSS s\u00fabory <br>bud\u00fa pridan\u00e9 do tabu\u013eky \u00fadajov Okna osahu.</html>
 
 menu.format.arrange.sendtoback.tooltip=Uistite sa, \u010di tento objekt nezakr\u00fdva in\u00fd objekt
 menu.format.arrange.bringtofront.tooltip=Zdvihn\u00fa\u0165 objekt na vrch, \u00faplne nezakryt\u00fd
