--- a/VUE2/src/tufts/vue/VueResources_zh.properties
+++ b/VUE2/src/tufts/vue/VueResources_zh.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Chinese Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -247,7 +248,7 @@ menu.content=\u5167\u5bb9
 menu.pathways.editslide=\u7de8\u8f2f\u5e7b\u71c8\u7247
 menu.pathways.editmasterslide=\u7de8\u8f2f\u4e3b\u5e7b\u71c8\u7247
 menu.pathways.handoutsandnotes=\u8b1b\u7fa9\u8207\u7b46\u8a18
-menu.help.vuelog=VUE \u8a18\u9304
+menu.help.vuelog=designVUE \u8a18\u9304
 menu.windiws.openrecent=\u958b\u555f\u6700\u8fd1\u7684
 menu.windows.save=\u5132\u5b58\u6a94\u6848
 menu.windows.saveas=\u53e6\u5b58\u65b0\u6a94
@@ -516,8 +517,8 @@ action.undo=\u5fa9\u539f
 action.redo=\u91cd\u505a
 
 #Preference Dialog 
-dialog.preference.message=\u60a8\u5fc5\u9808\u91cd\u65b0\u555f\u52d5 VUE \u624d\u80fd\u5920\u8b93\u8b8a\u66f4\u751f\u6548\u3002
-dialog.preference.title=\u91cd\u65b0\u555f\u52d5 VUE
+dialog.preference.message=\u60a8\u5fc5\u9808\u91cd\u65b0\u555f\u52d5 designVUE \u624d\u80fd\u5920\u8b93\u8b8a\u66f4\u751f\u6548\u3002
+dialog.preference.title=\u91cd\u65b0\u555f\u52d5 designVUE
 
 # Application Frame Dialog
 dialog.addurlaction.message=\u4e0d\u6b63\u78ba\u7684 URL\uff0c\u7121\u6cd5\u65b0\u589e\u8cc7\u6e90\u3002
@@ -570,7 +571,7 @@ optiondialog.savechages.message=\u60a8\u8981\u5c07\u8b8a\u66f4\u5132\u5b58\u5230
 optiondialog.savechages.title=\u5132\u5b58\u8b8a\u66f4?
 optiondialog.savechages.dontsave=\u4e0d\u5132\u5b58
 optiondialog.savechages.save=\u5132\u5b58
-dialog.initfailed.message=VUE \u8d77\u59cb\u5931\u6557
+dialog.initfailed.message=designVUE \u8d77\u59cb\u5931\u6557
 
 #Action
 dialog.activemap.message=\u7121\u4f5c\u696d\u4e2d\u5730\u5716\uff0c\u8acb\u958b\u555f\u4e00\u5f35\u6709\u6548\u7684\u5730\u5716\u3002
@@ -653,7 +654,7 @@ jbutton.load.label=\u8f09\u5165
 pane.dataset.message=\u8acb\u9078\u64c7\u8cc7\u6599\u96c6\u985e\u578b
 
 #PreferenceDailog
-preferencedailog.vuepreference=VUE \u504f\u597d\u8a2d\u5b9a
+preferencedailog.vuepreference=designVUE \u504f\u597d\u8a2d\u5b9a
 preferencedailog.mapdisplay=\u986f\u793a\u5730\u5716
 preferencedailog.images=\u5f71\u50cf
 
@@ -828,11 +829,11 @@ actionutil.filecorrupted.error=\u5132\u5b58\u932f\u8aa4\uff1b\u5730\u5716\u6a94\
 actionutil.filecorrupted.description=\u63cf\u8ff0\u932f\u8aa4
 actionutil.internalsave.title=\u5167\u90e8\u5132\u5b58\u932f\u8aa4
 actionutil.notifyversion.message=\u6a94\u6848 %s \u5df2\u7d93\u7528\u6bd4\u73fe\u5728\u4f7f\u7528\u4f86\u5f97\u65b0\u7684VUE\u7248\u672c\u5132\u5b58\u3002
-actionutil.notifyversion.datamodel=\u6b64\u5f35\u5730\u5716\u4e2d\u7684\u8cc7\u6599\u6a21\u578b\u70ba #%d\uff0c\u4e14\u6b64\u7248\u672c\u7684 VUE \u6700\u591a\u53ea\u80fd\u5920\u7406\u89e3\u5230\u6a21\u578b #%d\u3002
+actionutil.notifyversion.datamodel=\u6b64\u5f35\u5730\u5716\u4e2d\u7684\u8cc7\u6599\u6a21\u578b\u70ba #%d\uff0c\u4e14\u6b64\u7248\u672c\u7684 designVUE \u6700\u591a\u53ea\u80fd\u5920\u7406\u89e3\u5230\u6a21\u578b #%d\u3002
 actionutil.notifyversion.savedversion=\u5132\u5b58\u672c\u6a94\u6848\u7684VUE \u7248\u672c
-actionutil.notifyversion.currentversion=\u76ee\u524d\u6b63\u5728\u4f7f\u7528\u7684VUE\u7248\u672c
-actionutil.notifyversion.vuebuilt=VUE \u5df2\u5efa\u7acb
-actionutil.notifyversion.displaymap=\u6b64\u7248\u672c\u7684 VUE \u53ef\u80fd\u7121\u6cd5\u6b63\u78ba\u7684\u986f\u793a\u9019\u5f35\u5730\u5716\u3002 \u5132\u5b58\u70ba
+actionutil.notifyversion.currentversion=\u76ee\u524d\u6b63\u5728\u4f7f\u7528\u7684designVUE\u7248\u672c
+actionutil.notifyversion.vuebuilt=designVUE \u5df2\u5efa\u7acb
+actionutil.notifyversion.displaymap=\u6b64\u7248\u672c\u7684 designVUE \u53ef\u80fd\u7121\u6cd5\u6b63\u78ba\u7684\u986f\u793a\u9019\u5f35\u5730\u5716\u3002 \u5132\u5b58\u70ba
 actionutil.notifyversion.corruptmap=\u4f7f\u7528\u6b64\u7248\u672c\u7684\u9019\u5f35\u5730\u5716\u53ef\u80fd\u6703\u7522\u751f\u6709\u6bc0\u640d\u7684\u5730\u5716\u3002
 actionutil.notifyversion.versionwarning=\u7248\u672c\u8b66\u544a %s
 actionutil.filenotfound.error=\u7121\u6cd5\u5c0b\u627e
@@ -845,7 +846,7 @@ imagemap.fileexists.warning=png\u5f71\u50cf\u5df2\u7d93\u5b58\u5728\uff0c\u8981\
 imagemap.fileexists.title=\u6a94\u6848\u5df2\u7d93\u5b58\u5728
 
 #OpenAction
-openaction.mapopen.error=\u4e0b\u5217\u7684\u5730\u5716\u7121\u6cd5\u5728\u76ee\u524d\u7684VUE\u7248\u672c\u4e2d\u958b\u555f\u3002
+openaction.mapopen.error=\u4e0b\u5217\u7684\u5730\u5716\u7121\u6cd5\u5728\u76ee\u524d\u7684designVUE\u7248\u672c\u4e2d\u958b\u555f\u3002
 openaction.mapopen.title=\u958b\u555f\u5730\u5716\u932f\u8aa4
 openaction.mapnotfound.error=\u672a\u627e\u5230\u6a94\u6848
 openaction.mapnotfound.title=\u672a\u627e\u5230\u5730\u5716
@@ -855,7 +856,7 @@ openaction.openmapproblem.title=\u958b\u555f\u5730\u5716\u6642\u767c\u751f\u554f
 publishdatasourceaction.title=\u767c\u4f48\u932f\u8aa4
 
 #RFDOpenAction
-rfdopenaction.openfile.error=\u7121\u6cd5\u5728\u6b64\u7248\u672c\u7684VUE\u4e2d\u958b\u555f
+rfdopenaction.openfile.error=\u7121\u6cd5\u5728\u6b64\u7248\u672c\u7684designVUE\u4e2d\u958b\u555f
 rfdopenaction.openfile.title=\u958b\u555f\u5730\u5716\u932f\u8aa4
 
 #SaveAction
@@ -864,7 +865,7 @@ saveaction.targetfiel=\u76ee\u6a19\u6a94\u6848\u662f '%s'
 saveaction.savemap.error=\u5132\u5b58\u5730\u5716\u6642\u767c\u751f\u932f\u8aa4
 saveaction.saveacopy=\u5132\u5b58\u4e00\u4efd\u62f7\u8c9d
 saveaction.save=\u5132\u5b58
-dialog.saveaction.message=\u4ee5\u6b64\u7248\u672c\u7684VUE\u5132\u5b58 {0} \u80fd\u5920\u9810\u9632\u820a\u7248\u672c\u7684VUE \u6b63\u78ba\u5730\u986f\u793a\u3002 \u60a8\u53ef\u80fd\u5e0c\u671b\u7528\u65b0\u540d\u7a31\u5132\u5b58\u672c\u5f35\u5730\u5716\u3002
+dialog.saveaction.message=\u4ee5\u6b64\u7248\u672c\u7684designVUE\u5132\u5b58 {0} \u80fd\u5920\u9810\u9632\u820a\u7248\u672c\u7684VUE \u6b63\u78ba\u5730\u986f\u793a\u3002 \u60a8\u53ef\u80fd\u5e0c\u671b\u7528\u65b0\u540d\u7a31\u5132\u5b58\u672c\u5f35\u5730\u5716\u3002
 dialog.saveaction.title=\u7248\u672c\u516c\u544a {0}
 
 #OntologyList
@@ -990,7 +991,7 @@ jlabel.more=<< \u66f4\u591a
 jlabel.less=\u8f03\u5c11 >>
 jlabel.resourcemetadata=\u8a6e\u91cb\u8cc7\u6599\u8cc7\u6e90
 jlabel.all=\u5168\u90e8
-jlabel.newversion=\u6709\u8f03\u65b0\u7684 VUE \u7248\u672c\u53ef\u4f7f\u7528
+jlabel.newversion=\u6709\u8f03\u65b0\u7684 designVUE \u7248\u672c\u53ef\u4f7f\u7528
 jlabel.assetdisplayoffline=\u8cc7\u7522\u986f\u793a\u96e2\u7dda
 showagaindialog.donotshow.tooltip=\u4e0d\u518d\u986f\u793a 
 vuemenubar.printvisible.tooltip=\u5217\u5370\u986f\u793a\u7bc4\u570d
@@ -1172,7 +1173,7 @@ action.image.show=\u986f\u793a\u5f71\u50cf
 
 #Preferences window
 preferences.language.title=\u8a9e\u8a00
-preferences.language.description=Language to use: this will over-ride (for VUE only) the language chosen as the system preference.  You must restart VUE for any change to take effect.
+preferences.language.description=Language to use: this will over-ride (for designVUE only) the language chosen as the system preference.  You must restart designVUE for any change to take effect.
 preferences.language.loading=\u8f09\u5165\u4e2d...
 
 pathwaytable.menu.pathway=\u8def\u5f91\u9078\u55ae
@@ -1351,7 +1352,7 @@ interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1442,7 +1443,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
