--- a/VUE2/src/tufts/vue/VueResources_ru_RU.properties
+++ b/VUE2/src/tufts/vue/VueResources_ru_RU.properties
@@ -1,6 +1,7 @@
 # ============================================================================================================
 # VUE Russian Language File
 # October 21, 2009
+#HO 28/10/2011 - replaced VUE with designVUE on labels where appropriate for this edition
 # ============================================================================================================
 
 # This section contains metadata used by VUE to identify the language and file verions
@@ -248,7 +249,7 @@ menu.content=\u041a\u043e\u043d\u0442\u0435\u043d\u0442
 menu.pathways.editslide=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0441\u043b\u0430\u0439\u0434
 menu.pathways.editmasterslide=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043c\u0430\u0441\u0442\u0435\u0440-\u0441\u043b\u0430\u0439\u0434
 menu.pathways.handoutsandnotes=\u041f\u0440\u0435\u0437\u0435\u043d\u0442\u0430\u0446\u0438\u0438 \u0438 \u0437\u0430\u043c\u0435\u0442\u043a\u0438
-menu.help.vuelog=\u0416\u0443\u0440\u043d\u0430\u043b VUE
+menu.help.vuelog=\u0416\u0443\u0440\u043d\u0430\u043b designVUE
 menu.windiws.openrecent=\u041e\u0442\u043a\u0440\u044b\u0442\u044c \u043f\u043e\u0441\u043b\u0435\u0434\u043d\u0438\u0439
 menu.windows.save=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
 menu.windows.saveas=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043a\u0430\u043a...
@@ -516,12 +517,12 @@ action.undo=\u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c
 action.redo=\u0412\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c
 
 #Preference Dialog 
-dialog.preference.message=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0435 VUE \u0434\u043b\u044f \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u044f \u0432\u043d\u0435\u0441\u0435\u043d\u0438\u044f \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439.
-dialog.preference.title=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0435 VUE
+dialog.preference.message=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0435 designVUE \u0434\u043b\u044f \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u044f \u0432\u043d\u0435\u0441\u0435\u043d\u0438\u044f \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439.
+dialog.preference.title=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0435 designVUE
 
 #Preferences window
 preferences.language.title=\u042f\u0437\u044b\u043a
-preferences.language.description=\u042f\u0437\u044b\u043a \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c: \u044d\u0442\u043e \u0431\u0443\u0434\u0435\u0442 \u0437\u0430-\u0435\u0445\u0430\u0442\u044c (\u0434\u043b\u044f VUE \u0442\u043e\u043b\u044c\u043a\u043e) \u044f\u0437\u044b\u043a \u0432\u044b\u0431\u0440\u0430\u043d \u0432 \u043a\u0430\u0447\u0435\u0441\u0442\u0432\u0435 \u0441\u0438\u0441\u0442\u0435\u043c\u044b \u043f\u0440\u0435\u0444\u0435\u0440\u0435\u043d\u0446\u0438\u0439. \u0412\u044b \u0434\u043e\u043b\u0436\u043d\u044b \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c VUE \u0434\u043b\u044f \u043b\u044e\u0431\u043e\u0433\u043e \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0432\u0441\u0442\u0443\u043f\u0438\u043b\u0438 \u0432 \u0441\u0438\u043b\u0443
+preferences.language.description=\u042f\u0437\u044b\u043a \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c: \u044d\u0442\u043e \u0431\u0443\u0434\u0435\u0442 \u0437\u0430-\u0435\u0445\u0430\u0442\u044c (\u0434\u043b\u044f designVUE \u0442\u043e\u043b\u044c\u043a\u043e) \u044f\u0437\u044b\u043a \u0432\u044b\u0431\u0440\u0430\u043d \u0432 \u043a\u0430\u0447\u0435\u0441\u0442\u0432\u0435 \u0441\u0438\u0441\u0442\u0435\u043c\u044b \u043f\u0440\u0435\u0444\u0435\u0440\u0435\u043d\u0446\u0438\u0439. \u0412\u044b \u0434\u043e\u043b\u0436\u043d\u044b \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c designVUE \u0434\u043b\u044f \u043b\u044e\u0431\u043e\u0433\u043e \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0432\u0441\u0442\u0443\u043f\u0438\u043b\u0438 \u0432 \u0441\u0438\u043b\u0443
 preferences.language.loading=\u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0430...
 
 # Application Frame Dialog
@@ -575,7 +576,7 @@ optiondialog.savechages.message=\u0412\u044b \u0445\u043e\u0442\u0438\u0442\u043
 optiondialog.savechages.title=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f?
 optiondialog.savechages.dontsave=\u041d\u0435 \u0441\u043e\u0445\u0440\u0430\u043d\u044f\u0442\u044c
 optiondialog.savechages.save=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
-dialog.initfailed.message=\u041e\u0448\u0438\u0431\u043a\u0430 \u0437\u0430\u043f\u0443\u0441\u043a\u0430 VUE
+dialog.initfailed.message=\u041e\u0448\u0438\u0431\u043a\u0430 \u0437\u0430\u043f\u0443\u0441\u043a\u0430 designVUE
 
 #Action
 dialog.activemap.message=\u041a\u0430\u0440\u0442\u0430 \u043d\u0435 \u043e\u0442\u043a\u0440\u044b\u0442\u0430. \u041e\u0442\u043a\u0440\u043e\u0439\u0442\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u0443\u044e \u043a\u0430\u0440\u0442\u0443.
@@ -658,7 +659,7 @@ jbutton.load.label=\u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0430
 pane.dataset.message=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430, \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043f \u043f\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043b\u0435\u043d\u0438\u044f \u0434\u0430\u043d\u043d\u044b\u0445
 
 #PreferenceDailog
-preferencedailog.vuepreference=\u0423\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0438 VUE
+preferencedailog.vuepreference=\u0423\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0438 designVUE
 preferencedailog.mapdisplay=\u0414\u0435\u043c\u043e\u043d\u0441\u0442\u0440\u0430\u0446\u0438\u044f \u043a\u0430\u0440\u0442\u044b
 preferencedailog.images=\u0418\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f
 
@@ -833,12 +834,12 @@ actionutil.filecorrupted.error=\u041e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e
 actionutil.filecorrupted.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u043f\u0440\u043e\u0431\u043b\u0435\u043c\u044b
 actionutil.internalsave.title=\u0412\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u044f\u044f \u043e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f
 actionutil.notifyversion.message=\u0424\u0430\u0439\u043b %s \u0431\u044b\u043b \u0441\u043e\u0445\u0440\u0430\u043d\u0451\u043d \u0432 \u0431\u043e\u043b\u0435\u0435 \u043f\u043e\u0437\u0434\u043d\u0435\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 VUE.
-actionutil.notifyversion.datamodel=\u041c\u043e\u0434\u0435\u043b\u044c \u0434\u0430\u043d\u043d\u044b\u0445 \u044d\u0442\u043e\u0439 \u043a\u0430\u0440\u0442\u044b #%d. \u042d\u0442\u0430 \u0432\u0435\u0440\u0441\u0438\u044f VUE \u0440\u0430\u0441\u043f\u043e\u0437\u043d\u0430\u0451\u0442 \u0442\u043e\u043b\u044c\u043a\u043e \u0434\u043e \u043c\u043e\u0434\u0435\u043b\u0438 #%d.
+actionutil.notifyversion.datamodel=\u041c\u043e\u0434\u0435\u043b\u044c \u0434\u0430\u043d\u043d\u044b\u0445 \u044d\u0442\u043e\u0439 \u043a\u0430\u0440\u0442\u044b #%d. \u042d\u0442\u0430 \u0432\u0435\u0440\u0441\u0438\u044f designVUE \u0440\u0430\u0441\u043f\u043e\u0437\u043d\u0430\u0451\u0442 \u0442\u043e\u043b\u044c\u043a\u043e \u0434\u043e \u043c\u043e\u0434\u0435\u043b\u0438 #%d.
 actionutil.notifyversion.savedversion=\u0412\u0435\u0440\u0441\u0438\u044f VUE, \u0432 \u043a\u043e\u0442\u043e\u0440\u043e\u0439 \u0441\u043e\u0445\u0440\u0430\u043d\u0451\u043d \u044d\u0442\u043e\u0442 \u0444\u0430\u0439\u043b
-actionutil.notifyversion.currentversion=\u0422\u0435\u043a\u0443\u0449\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f VUE
-actionutil.notifyversion.vuebuilt=\u0421\u0431\u043e\u0440\u043a\u0430 VUE
-actionutil.notifyversion.displaymap=\u0414\u0430\u043d\u043d\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f VUE \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u043e\u0442\u043e\u0431\u0440\u0430\u0437\u0438\u0442\u044c \u044d\u0442\u0443 \u043a\u0430\u0440\u0442\u0443 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e.  \u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435
-actionutil.notifyversion.corruptmap= \u043a\u0430\u0440\u0442\u044b \u0432 \u044d\u0442\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 VUE \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u0438\u0432\u0435\u0441\u0442\u0438 \u043a \u0435\u0451 \u043f\u043e\u0432\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u044e.
+actionutil.notifyversion.currentversion=\u0422\u0435\u043a\u0443\u0449\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f designVUE
+actionutil.notifyversion.vuebuilt=\u0421\u0431\u043e\u0440\u043a\u0430 designVUE
+actionutil.notifyversion.displaymap=\u0414\u0430\u043d\u043d\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f designVUE \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u043e\u0442\u043e\u0431\u0440\u0430\u0437\u0438\u0442\u044c \u044d\u0442\u0443 \u043a\u0430\u0440\u0442\u0443 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e.  \u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435
+actionutil.notifyversion.corruptmap= \u043a\u0430\u0440\u0442\u044b \u0432 \u044d\u0442\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 designVUE \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u0438\u0432\u0435\u0441\u0442\u0438 \u043a \u0435\u0451 \u043f\u043e\u0432\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u044e.
 actionutil.notifyversion.versionwarning=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435 \u0432\u0435\u0440\u0441\u0438\u0438 %s
 actionutil.filenotfound.error=\u041d\u0435 \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0435\u043d
 actionutil.filenotfound.title=\u0424\u0430\u0439\u043b \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d
@@ -850,7 +851,7 @@ imagemap.fileexists.warning=PNG-\u0438\u0437\u043e\u0431\u0440\u0430\u0436\u0435
 imagemap.fileexists.title=\u0424\u0430\u0439\u043b \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
 
 #OpenAction
-openaction.mapopen.error=\u041a\u0430\u0440\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043e\u0442\u043a\u0440\u044b\u0442\u0430 \u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0435\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 VUE.
+openaction.mapopen.error=\u041a\u0430\u0440\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043e\u0442\u043a\u0440\u044b\u0442\u0430 \u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0435\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 designVUE.
 openaction.mapopen.title=\u041e\u0448\u0438\u0431\u043a\u0430 \u043e\u0442\u043a\u0440\u044b\u0442\u0438\u044f \u043a\u0430\u0440\u0442\u044b
 openaction.mapnotfound.error=\u0444\u0430\u0439\u043b \u043d\u0435 \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0435\u043d.
 openaction.mapnotfound.title=\u041a\u0430\u0440\u0442\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430
@@ -860,7 +861,7 @@ openaction.openmapproblem.title=\u041f\u0440\u043e\u0431\u043b\u0435\u043c\u0430
 publishdatasourceaction.title=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0443\u0431\u043b\u0438\u043a\u0430\u0446\u0438\u0438
 
 #RFDOpenAction
-rfdopenaction.openfile.error=\u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u0438\u0435 \u0432 \u0434\u0430\u043d\u043d\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 VUE.
+rfdopenaction.openfile.error=\u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u0438\u0435 \u0432 \u0434\u0430\u043d\u043d\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 designVUE.
 rfdopenaction.openfile.title=\u041e\u0448\u0438\u0431\u043a\u0430 \u043e\u0442\u043a\u0440\u044b\u0442\u0438\u044f \u043a\u0430\u0440\u0442\u044b
 
 #SaveAction
@@ -869,7 +870,7 @@ saveaction.targetfiel=\u0426\u0435\u043b\u0435\u0432\u043e\u0439 \u0444\u0430\u0
 saveaction.savemap.error=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f \u043a\u0430\u0440\u0442\u044b
 saveaction.saveacopy=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043a\u043e\u043f\u0438\u044e
 saveaction.save=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
-dialog.saveaction.message=\u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435 {0} \u0432 \u0434\u0430\u043d\u043d\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 VUE \u043d\u0435 \u043f\u043e\u0437\u0432\u043e\u043b\u0438\u0442 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e \u0432\u043e\u0441\u043f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0438\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0440\u0430\u043d\u043d\u0438\u043c \u0432\u0435\u0440\u0441\u0438\u044f\u043c VUE \n.  \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0441\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u044d\u0442\u0443 \u043a\u0430\u0440\u0442\u0443 \u043f\u043e\u0434 \u0434\u0440\u0443\u0433\u0438\u043c \u0438\u043c\u0435\u043d\u0435\u043c.
+dialog.saveaction.message=\u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435 {0} \u0432 \u0434\u0430\u043d\u043d\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438 designVUE \u043d\u0435 \u043f\u043e\u0437\u0432\u043e\u043b\u0438\u0442 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e \u0432\u043e\u0441\u043f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0438\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0440\u0430\u043d\u043d\u0438\u043c \u0432\u0435\u0440\u0441\u0438\u044f\u043c VUE \n.  \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0441\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u044d\u0442\u0443 \u043a\u0430\u0440\u0442\u0443 \u043f\u043e\u0434 \u0434\u0440\u0443\u0433\u0438\u043c \u0438\u043c\u0435\u043d\u0435\u043c.
 dialog.saveaction.title=\u041f\u0440\u0438\u043c\u0435\u0447\u0430\u043d\u0438\u044f \u0432\u0435\u0440\u0441\u0438\u0438 {0}
 
 #OntologyList
@@ -995,7 +996,7 @@ jlabel.more=<< \u0431\u043e\u043b\u044c\u0448\u0435
 jlabel.less=\u043c\u0435\u043d\u044c\u0448\u0435 >>
 jlabel.resourcemetadata=\u041c\u0435\u0442\u0430\u0434\u0430\u043d\u043d\u044b\u0435 \u0440\u0435\u0441\u0443\u0440\u0441\u0430
 jlabel.all=\u0412\u0441\u0451
-jlabel.newversion=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u0430 \u043d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f VUE
+jlabel.newversion=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u0430 \u043d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f designVUE
 jlabel.assetdisplayoffline=Asset Display Offline
 showagaindialog.donotshow.tooltip=\u043d\u0435 \u043f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\u0442\u044c \u0441\u043d\u043e\u0432\u0430 
 vuemenubar.printvisible.tooltip=\u041f\u0435\u0447\u0430\u0442\u044c \u0432\u0438\u0434\u0438\u043c\u043e\u0439 \u043e\u0431\u043b\u0430\u0441\u0442\u0438
@@ -1349,7 +1350,7 @@ interactionTools.off=off
 
 #SEASR
 seasr.analysis.title=SEASR Analysis
-seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to VUE
+seasr.analysis.subtitle=Analyze a webpage using a Seasr flow and return results to designVUE
 seasr.analysis.1=1
 seasr.analysis.2=2
 seasr.analysis.3=3
@@ -1440,7 +1441,7 @@ quickImport.selectfile=Location:
 quickImport.browse=Browse
 quickImport.cancel=Cancel
 quickImport.add=Add
-quickImport.help=<html>Add content to a new VUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
+quickImport.help=<html>Add content to a new designVUE map. CSV, XML, RSS, RDF, OWL files <br>and folders (images or files) are supported.  CSV, XML, and RSS files <br>will be added to the Datasets tab of the Content window.</html>
 
 menu.format.arrange.sendtoback.tooltip=Make sure this object doesn't obscure any other object
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
